@@ -46,6 +46,7 @@ public class DefaultBatchArtifactFactory implements BatchArtifactFactory, XMLStr
     private final static String BATCHEE_XML = "META-INF/batchee.xml";
 
     private final static QName BATCH_ROOT_ELEM = new QName("http://xmlns.jcp.org/xml/ns/javaee", "batch-artifacts");
+    private final static QName BATCH_ROOT_ELEM_JAKARTA = new QName("https://jakarta.ee/xml/ns/jakartaee", "batch-artifacts");
 
     // Uses TCCL
     @Override
@@ -156,12 +157,12 @@ public class DefaultBatchArtifactFactory implements BatchArtifactFactory, XMLStr
                 //
                 if (event == START_ELEMENT) {
                     if (!processedRoot) {
-                        QName rootQName = xmlStreamReader.getName();
-                        if (!rootQName.equals(BATCH_ROOT_ELEM)) {
-                            throw new IllegalStateException("Expecting document with root element QName: " + BATCH_ROOT_ELEM
-                                + ", but found root element with QName: " + rootQName);
+                        final QName rootQName = xmlStreamReader.getName();
+                        if (rootQName.equals(BATCH_ROOT_ELEM) || rootQName.equals(BATCH_ROOT_ELEM_JAKARTA)) {
+                           processedRoot = true;
                         } else {
-                            processedRoot = true;
+                            throw new IllegalStateException("Expecting document with root element QName: " + BATCH_ROOT_ELEM
+                                    + ", but found root element with QName: " + rootQName);
                         }
                     } else {
 
@@ -193,6 +194,8 @@ public class DefaultBatchArtifactFactory implements BatchArtifactFactory, XMLStr
 
     protected static interface ArtifactLocator {
         Object getArtifactById(String id);
+
+        Class<?> getArtifactClassById(String id);
     }
 
     private class ArtifactMap implements ArtifactLocator {
@@ -236,18 +239,19 @@ public class DefaultBatchArtifactFactory implements BatchArtifactFactory, XMLStr
             Object artifactInstance = null;
 
             try {
-                final Class<?> clazz = idToArtifactClassMap.get(id);
+                final Class<?> clazz = getArtifactClassById(id);
                 if (clazz != null) {
-                    artifactInstance = (idToArtifactClassMap.get(id)).newInstance();
+                    artifactInstance = clazz.getConstructor().newInstance();
                 }
-            } catch (final IllegalAccessException e) {
-                throw new BatchContainerRuntimeException("Tried but failed to load artifact with id: " + id, e);
-            } catch (final InstantiationException e) {
+            } catch (final Exception e) {
                 throw new BatchContainerRuntimeException("Tried but failed to load artifact with id: " + id, e);
             }
-
-
             return artifactInstance;
+        }
+
+        @Override
+        public Class<?> getArtifactClassById(String id) {
+            return idToArtifactClassMap.get(id);
         }
     }
 
